fixed responsiveness issues on mobile

--- a/css/services.css
+++ b/css/services.css
@@ -2,6 +2,12 @@
     --color-1: #111;
     --text-color: #f0f0f0;
     --accent-color: #DAA520;
+    --white-color: hsl(170, 12%, 98%) !important;
+    --gray-color: hsl(170, 4%, 60%) !important;
+    --black-color: hsl(170, 12%, 8%) !important;
+    --body-font: "Bona Nova", serif!;
+    --normal-font-size: .938rem !important;
+    
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
@@ -23,8 +29,10 @@ body {
     color: #fff;
     scroll-behavior: smooth;
     transition: background-color 0.3s ease;
-    overflow-y: auto; /* Ensure vertical scroll */
+    overflow-x: hidden;
 }
+
+
 
 /* 
 ****************************************************************************************************
@@ -257,113 +265,6 @@ Owl Carousel
 ****************************************************************************************************
 */
 
-#wrapper {
-	position: relative;
-	height: 100vh;
-}
-#slider-area {
-	position: absolute;
-	height: 100vh;
-	width: 100%;
-	top: 0;
-	left: 0;
-	z-index: -1;
-}
-#slider-area::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.8);
-}
-#slider-area .owl-item div {
-	height: 100vh;
-	width: 100%;
-	background-repeat: no-repeat;
-	-webkit-background-size: cover;
-	background-size: cover;
-	background-position: center center;
-}
-#wrapper #nav-area {
-	position: absolute;
-	top: 5%;
-	left: 50%;
-	text-align: center;
-	z-index: 1;
-}
-.nav-area {
-	text-align: center;
-	padding: 26px 0;
-}
-.nav a {
-	font-family: montserrat;
-	text-decoration: none;
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 20px;
-	margin: 0 15px;
-	padding: 10px;
-	transition: all .6s ease;
-}
-.nav a:hover {
-	background: coral;
-}
-.slider-text {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
-}
-.slider-text h2 {
-	font-family: montserrat;
-	font-size: 55px;
-	margin: 0;
-	color: #fff;
-	text-transform: uppercase;
-}
-.slider-text h2 span {
-	color: coral;
-}
-.slider-text p {
-	font-size: 18px;
-	color: #fff;
-}
-.slider-text a {
-	text-decoration: none;
-	background: var(--accent-color);
-	color: #fff;
-	display: inline-block;
-	padding: 12px 45px;
-	margin: 15px;
-	text-transform: uppercase;
-	font-family: montserrat;
-	font-weight: 500;
-	border: 2px solid #fff;
-}
-.slider-text a.btn {
-	background-color: transparent;
-}
-
-.btn-dez a {
-    text-decoration: none;
-	background: var(--accent-color);
-	color: #fff;
-	display: inline-block;
-	padding: 12px 45px;
-	margin: 15px;
-	text-transform: uppercase;
-	font-family: montserrat;
-	font-weight: 500;
-	border: 2px solid #fff;
-}
-
-.btn-dez a:hover {
-    background: transparent;
-    transform: scale(1.2s);
-}
 
 
 
@@ -717,4 +618,12 @@ footer {
     color: gray; 
     
 }
+
+
+/* contact us */
+.vr {
+    border-left: 1px solid lightgray;
+    margin: 0 auto;
+}
+
 
